2008-07-28  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/tests/semaphore-test.c: move function call out of
	  variable initialization

2008-07-25 Dan Locks <dwlocks@zmanda.com>
	* packaging/deb/control: added alternative dependency of libssl0.9.8 for
	  Ubuntu 8.x builds.  Added build dependencies for debhelper, fakeroot,
	  libcurl-dev, libssl-dev.  Updated server and client dependency for curl
	  to libcurl3

2008-07-18 Dan Locks <dwlocks@zmanda.com>
	*  configure.in:  add format-security to gcc compile flags
	*  server-src/amindexd.c,
	   server-src/dumper.c,
	   server-src/reporter.c,
	   restore-src/restore.c,
	   common-src/security-util.c,
	   common-src/bsd-security.c:  replacemented unquoted strings in
	   function arguments with "%s", arg.  jrfranks's suggestion, dustin provided
	   syntax for the fix.

2008-07-17 Dan Locks <dwlocks@zmanda.com>
	* packaging/debian/amanda-enterprise-backup-*.install: added entries for
	  applications and devices man pages.
	  
2008-07-17  Jean-Louis Martineau <martineau@zmanda.com>
	* man/Makefile.am: Add amzfs-snapshot.8
	* man/xml-source/amzfs-snapshot.8.xml: New man page.
	* man/xml-source/amanda.8.xml: Add amzfs-snapshot.8
	* man/xml-source/amanda-scripts.7.xml: Add amzfs-snapshot.8
	* application-src/amzfs-snapshot.pl: New script
	* application-src/Makefile.am: Add amzfs-snapshot
	* perl/Amanda/Util.swg: Add sanitise_filename.

2008-07-17  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: amandad must be run by root for krb5 auth.

2008-07-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Improve message in failure to dump in degraded
			       mode.

2008-07-16 Dan Locks <dwlocks@zmanda.com>
	* packaging/deb/control,
	  packaging/rpm/amanda.spec: added explicit dependency on openssl, and a 
	  build dependency for openssl and curl development files.

2008-07-15  Dustin J. Mitchell <dustin@zmanda.com>
	* example/xinetd.amandaserver.in example/xinetd.amandaclient.in: